--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,6 @@
     },
     "rules": {
         "semi": ["error", "always"],
-        "quotes": ["error", "single"]
+        "quotes": ["error", "double"]
     }
 }
