--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variables file
-
+.env
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
